# bitcask-rs

./: Cargo.toml
benches/: kv_bench.rs
examples/: basic_operations.rs
http/: Cargo.toml
http/src/: main.rs
src/: batch.rs  db.rs  db_tests.rs  errors.rs  iterator.rs  lib.rs  merge.rs  options.rs
src/data/: data_file.rs  log_record.rs
src/fio/: file_io.rs  mmap.rs  mod.rs
src/index/: bptree.rs  btree.rs  mod.rs  skiplist.rs
src/util/: file.rs  mod.rs  rand_kv.rs
