[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_operation"
path = "examples/basic_operations.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
crc32fast = "1.4.0"
crossbeam-skiplist = "0.1.3"
env_logger = "0.11.3"
fs2 = "0.4.3"
jammdb = "0.11.0"
log = "0.4.21"
memmap2 = "0.9.4"
parking_lot = "0.12.2"
prost = "0.12.4"
thiserror = "1.0.59"
